<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".PanierFragment"
    >

    <TextView
        android:id="@+id/panierTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panier"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <ListView
        android:id="@+id/panierLst"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/panierTitle"
        android:layout_above="@+id/summaryLayout"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/summaryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@android:color/white"
        >

        <TextView
            android:id="@+id/txtTotalPrix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalPrix"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txtTotalTaxe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalTaxe"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txtTotalTTC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalTTC"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />
    </LinearLayout>
</RelativeLayout>